--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 </head>
 <body>
     <container>
-    <div>
+    <div class="text">
         <div class="gambar">
             <img src="man.jpg" alt="">
         </div>
         <div>
-            <p>Hello i'am, Jati wicaksono</p>
+            <p style="color: #0ABAB5;">Hello i'am, Jati wicaksono</p>
             <h1>UI/UX Designer Expert & Frontend Developer</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
         </div>
     </div>
-    <div>
+    <div class="services">
         <div>
             <p>Services</p>
             <h2>I Offer Services According to My Expertise.</h2>
         </div>
         <div>
-            <div>
+            <div class="pekerjaan">
                 <div class="job">
                     <img class="logo" src="ui.png" alt="">
                     <div>
